fix(ui/TextInput): make wrapper stretch by child size

--- a/packages/ui/components/forms/TextInput/index.styl
+++ b/packages/ui/components/forms/TextInput/index.styl
@@ -34,7 +34,8 @@ $errorColor = $UI.colors.attention
 
 .input-input
   margin 0 // important for safari
-  flex 1 // important for multiline
+  flex-grow 1 // important for multiline
+  flex-shrink 1
   // padding-top, padding-bottom is important
   // for android because it has invisible paddings
   // on the web is important for textarea (override default paddings)
